  as dayOfWeek on a YearMonthDay or millisOfDay on a TimeOfDay.
  Neither YearMonthDay or TimeOfDay will be immediately deprecated as they
  are in widespread use.
  The API of the new classes has been kept as similar to YearMonthDay/TimeOfDay
  as possible to aid migration. The main difference is the method names on the
  property class.

- DateTime/DateMidnight/YearMonthDay/TimeOfDay.withXxx()
  Add withXxx methods that allow an individul field to be changed, for example:
  firstOfMonth = today.withDayOfMonth(1);
  These methods are the immutable equivalent of set methods.
  These are convenince methods for the methods on the property API.

- DateTimeFormatter/DateTimeParserBucket
  If a parsed datetime is illegal due to field range or time zone offset
  transition, thrown exception includes text of datetime being parsed.


Compatibility with 1.2
----------------------
Binary compatible - Yes

Source compatible - Yes
  - v1.2 and v1.3 are source compatible in their public and protected API

Serialization compatible - Yes

Data compatible - Yes
  - DateTimeZone data updated to version 2006c


Deprecations since 1.2
----------------------
- Instant.toDateTimeISO
- Instant.toMutableDateTimeISO
    These were identical to the methods without the ISO suffix


Bug fixes since 1.2
-------------------
- DateTime/DateMidnight/MutableDateTime/AbstractInstant
   Conversion methods toDateTime, toDateTimeISO, toMutableDateTime, and
    toMutableDateTimeISO now preserve the time zone.
    Previously calling any of these four methods would convert the result to
    the default time zone. This was incorrect.
    The methods have been changed to preserve the time zone.
   The similarly named methods on Instant have not changed behaviour.

- Interval/MutableInterval.overlaps(ReadableInterval)
  Previously, this method didn't handle empty intervals correctly
  Now, an empty interval at the start of a larger interval does overlap

- DateTimeFormatterBuilder.MatchingParser